2022年3月21日 Mybatis复习

--- a/web/PostTest.html
+++ b/web/PostTest.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form action="/ReviewJavaServlet/hello" method="post">
+    <form action="/ReviewJavaServlet/contextServlet2" method="get">
         <input type="submit">
     </form>
 </body>
